# hk

./: .gitignore  .gitmodules  .luarc.json  .prettierignore  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  WINDOWS_SUPPORT.md  angler.toml  aube-lock.yaml  build.rs  cliff.toml  communique.toml  default.nix  flake.nix  foo.py  hk-example.pkl  hk.pkl  hk.tmpl.pkl  hk.toml  hk.usage.kdl  mise.toml  package.json  pr.md  settings-schema.json  settings.toml  test-config.pkl  test-untracked.txt  x
.cargo/: config.toml
.github/: actionlint.yaml  renovate.json
benchmark/: benchmark.sh  generate-project.sh  run.sh
clx/: Cargo.toml
core/: plugin.pkl  prettier.lua  prettier.pkl
docs/: .gitignore  about.md  aube-lock.yaml  benchmarks.md  builtins.md  config_reference.md  configuration.md  contributing.md  environment_variables.md  eslint.config.mjs  getting_started.md  glossary.md  hooks.md  index.md  logging.md  mise_integration.md  package.json  pkl_introduction.md  shanty.md  why-hk.md
e2e-win/: check.Tests.ps1  help.Tests.ps1  init.Tests.ps1  run.ps1  validate.Tests.ps1  version.Tests.ps1
ensembler/: Cargo.toml
examples/: multi_progress_report.rs  progress.rs  run.rs
mise-tasks/: benchmark  build  ci  demo  dist  gen-release-notes  gen-release-summary  hk  lint  lint-fix  msrv  postlint  pre-release  prelint  release  release-plz  subtree-sync  update-version.sh
pkl/: .gitignore  Builtins.pkl  Config.pkl  Types.pkl  UserConfig.pkl  _reflector.pkl  builtins.pkl  config.pkl  file_locks.pkl  file_types.pkl  formatters.pkl  reflector.pkl  step.pkl
plans/: new_config.md
scripts/: check-docs-sync.sh  gen_builtins.py  generate-examples.sh  reflect.pkl
src/: builtins.rs  cache.rs  cmd.rs  config.rs  diff.rs  env.rs  error.rs  file_rw_locks.rs  file_type.rs  git.rs  git_cfg.rs  git_util.rs  glob.rs  hook.rs  hook_options.rs  lib.rs  logger.rs  lsp_types.rs  macros.rs  main.rs  merge.rs  mise_env.rs  multi_progress_report.rs  output.rs  plan.rs  progress.rs  progress_bar.rs  progress_report.rs  settings.rs  settings.rs.backup  shell.rs  step.rs  step_context.rs  step_depends.rs  step_group.rs  step_job.rs  step_queue.rs  step_scheduler.rs  step_test.rs  style.rs  (+6 more)
tapes/: hk-demo.tape
test/: HELPERS.md  README.md  apply_check_diff.bats  arg_escape.bats  auto_batch_large_files.bats  (+175 more)
(+469 files in other folders)
