[package]
name = "clx"
version = "0.2.11"
edition = "2024"
authors = ["jdx"]
description = "Components for CLI applications"
license = "MIT"
repository = "https://github.com/jdx/clx"
readme = "README.md"
include = ["examples/**/*.rs", "src/**/*.rs"]
rust-version = "1.85"

[dependencies]
console = "0.15"
indicatif = "0.17"
log = "0.4"
serde = "1"
strum = { version = "0.27", features = ["derive"] }
tera = "1"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user"] }

[dev-dependencies]
test-log = "0.2"
