[package]
name = "clx"
version = "0.2.16"
edition = "2024"
authors = ["jdx"]
description = "Components for CLI applications"
license = "MIT"
repository = "https://github.com/jdx/clx"
readme = "README.md"
include = ["examples/**/*.rs", "src/**/*.rs"]
rust-version = "1.85"

[dependencies]
console = "0.16"
indicatif = "0.18"
log = "0.4"
serde = "1"
strum = { version = "0.27", features = ["derive"] }
tera = "1"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "user"] }

[dev-dependencies]
test-log = "0.2"
